# common

./: .gitignore  Cargo.toml  LICENSE  README.md
candid/: Cargo.toml  can.did
candid/src/: main.rs
lib/canister/api/: Cargo.toml
lib/canister/api/src/queries/: get_canister_metrics.rs
lib/canister/api/src/updates/: get_canister_status.rs
lib/canister/impl/: Cargo.toml
lib/canister/impl/src/: lib.rs  macros.rs  stable_structures.rs
lib/canister/impl/src/components/: ic.rs  ic_agent.rs  ic_management.rs  icrc2_ledger.rs  ledger.rs  logger.rs  mod.rs  rand.rs  time.rs  timer.rs
lib/canister/impl/src/components/allowance_ledger/: api.rs  interface.rs  interface_impl.rs
lib/canister/impl/src/components/cmc/: api.rs  interface.rs  interface_impl.rs
lib/canister/impl/src/components/ecdsa/: interface.rs  interface_impl.rs  mod.rs
lib/canister/impl/src/components/identity/: api.rs  interface.rs  interface_impl.rs
lib/canister/impl/src/components/nns/: api.rs  interface.rs  interface_impl.rs  mod.rs
lib/canister/impl/src/components/nns_dap/: api.rs  interface.rs  interface_impl.rs
lib/canister/impl/src/handlers/: mod.rs
lib/canister/impl/src/handlers/ic_agent/: mod.rs  sleeper.rs  types.rs  verify.rs
lib/canister/impl/src/handlers/ic_agent/executor/: call.rs  mod.rs  query.rs
lib/canister/impl/src/handlers/ic_request/: builder.rs  mod.rs  public_key.rs  sha256.rs
lib/canister/impl/src/handlers/ic_request/request_id/: error.rs  mod.rs
lib/canister/impl/src/updates/: get_canister_status.rs  mod.rs
lib/canister/types/: Cargo.toml
lib/canister/types/src/: chunk.rs  ecdsa.rs  ic_request.rs  lib.rs  metrics.rs  time.rs  timestamped.rs  tokens.rs
lib/canister/types/src/components/: identity.rs
lib/certification/: Cargo.toml
lib/certification/src/: lib.rs
lib/common_embed_assets/: Cargo.toml
lib/common_embed_assets/src/: declarations.rs  headers.rs  lib.rs  serve.rs
lib/contract/api/: Cargo.toml
lib/contract/api/src/: lib.rs
lib/contract/api/src/lifecycle/: init_contract.rs
lib/contract/api/src/queries/: get_contract_owner.rs  mod.rs
lib/contract/api/src/types/: mod.rs
lib/contract/api/src/updates/: activate_contract.rs  add_contract_controller.rs  get_contract_certificate.rs  mod.rs
lib/contract/c2c_client/: Cargo.toml
lib/contract/c2c_client/src/: lib.rs
lib/referral/api/: Cargo.toml
lib/referral/api/src/updates/: get_referral_reward_data.rs  mod.rs
lib/referral/c2c_client/: Cargo.toml
lib/referral/c2c_client/src/: lib.rs
