[package]
name = "common_canister_api"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common_canister_types = { path = "../types" }
ic-cdk = { workspace = true }
candid = { workspace = true }
serde = { workspace = true }
