[package]
name = "common_contract_api"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common_canister_types = { path = "../../canister/types" }
candid = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
