[package]
name = "common_contract_c2c_client"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common_contract_api = { path = "../api" }
common_canister_types = { path = "../../canister/types" }
candid = { workspace = true }
serde = { workspace = true }
ic-cdk = { workspace = true }
