[package]
name = "referral_canister_api"
version.workspace = true
edition.workspace = true

[dependencies]
common_canister_types = { path = "../../canister/types" }
common_contract_api = { path = "../../contract/api" }
candid = { workspace = true }
serde = { workspace = true }
ic-cdk = { workspace = true }
