[package]
name = "referral_c2c_client"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
referral_canister_api = { path = "../api" }
candid = { workspace = true  }
serde = { workspace = true  }
ic-cdk = { workspace = true  }
