[package]
name = "referral_c2c_client"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
referral_canister_api = { path = "../api" }
candid = { workspace = true  }
serde = { workspace = true  }
ic-cdk = { workspace = true  }
